--- a/src/app/scanner/navbar/nav.component.html
+++ b/src/app/scanner/navbar/nav.component.html
@@ -1,17 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand"  routerLink="/" >Opciones</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-info bg-opacity-25" >
+    <a class="navbar-brand"  routerLink="">Inicio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link"  routerLink="excel">Cargar Excel</a>
+          <a class="nav-link"  routerLink="Excel">Cargar Excel</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="date">Ingresar Datos</a>
+          <a class="nav-link" routerLink="Date">Ingresar Datos</a>
         </li>
-    
       </ul>
     </div>
   </nav>
